More proofreading edits from Kim and I.
git-svn-id: https://svn.mccode.org/svn/McStasTeX@171 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/mcstas.bib
+++ b/trunk/mcstas.bib
@@ -458,3 +458,12 @@
    year      = {1975},
    volume    = {24}
 }
+
+@article{neldermead,
+   author    = {J.A. Nelder and R. Mead},
+   journal   = {Computer Journal},
+   year      = {1965},
+   volume    = {7},
+   pages     = {308-313}
+
+}
