--- a/trunk/running.tex
+++ b/trunk/running.tex
@@ -482,7 +482,10 @@ When choosing the HTML format, the simulation results are saved as a web page, w
       terminal, such as detector intensities, will still be written). \\
       \hline
       \texttt{-g} \my \texttt{--gravitation}
-        & This option toggles the gravitation (approximation) handling for the whole neutron propagation within the instrument. May produce wrong results depending on the components.\\
+        & This option toggles the gravitation (approximation) handling
+        for the whole neutron propagation within the instrument. May
+        produce wrong results if the used components do no comply with
+        this option.\\
       \hline
       \texttt{--format={\it FORMAT}}
         & This option sets the file format for result simulation and data files. \\
@@ -585,7 +588,7 @@ When choosing the HTML format, the simulation results are saved as a web page, w
 Once the simulation has started, it is possible, under Unix, Linux and Mac OS X systems, to interact with the on-going simulation.
 
 \MCS\ attaches a signal handler to the simulation process. In order to send a signal to the process, the process-id {\it pid} must be known. Users may look at their running processes with the Unix 'ps' command, or alternatively process managers like 'top' and 'gtop'.
-If a {\it file.out} simulation obtained from \MCS\ is running, the process status command should output a line ressembling
+If a {\it file.out} simulation obtained from \MCS\ is running, the process status command should output a line resembling
 \begin{quote}
   \verb|<user>| {\it 13277} \verb|7140 99 23:52 pts/2    00:00:13 | {\it file.out}\\
 \end{quote}
@@ -609,7 +612,11 @@ A typical usage example would be, for instance, to save data during a
 simulation, plot or analyze it, and decide to interupt the simulation
 earlier if the desired statistics has been achieved. This may be done automatically using the \verb+Progress_bar+ component.
 
-Whenever simulation data is generated before end (or the simulation is interupted), the 'ratio' field of the monitored data will provide the level of achievement of the computation (for instance '3.33e+05/1e+06'). Intensities are then usually to be scaled accordingly.
+Whenever simulation data is generated before end (or the simulation is
+interupted), the 'ratio' field of the monitored data will provide the
+level of achievement of the computation (for instance
+'3.33e+05/1e+06'). Intensities are then usually to be scaled
+accordingly by the user.
 
 Additionally, any system error will result in similar messages, giving
 indication about the occurence of the error (component and
@@ -632,16 +639,16 @@ data before ending. Most errors appear when using a newly written component, in 
   \end{center}
 \end{table}
 
-\subsection{Optimizing simulations}
+\subsection{Optimizing simulation speed}
 \index{Optimization|textbf}
 \label{s:optim}
-There are various ways to speedup simulations
+There are various ways to speed up simulations
 \begin{itemize}
 \item Optimize the compilation of the instrument, as explained in section~\ref{s:compile}.
 \item Execute the simulation in parallel on a computer grid or a cluster (with MPI or multi-threading) as explained in section~\ref{s:run-mpi}.
 \item Divide simulation into parts using a file for saving or generating neutron
-      events. This way, a guide may be simulated only once, saving the neutron events
-      getting out from it as a file, which is being read quickly by the second simulation
+      events. In this way, a guide may be simulated only once, saving the neutron events
+      at the guide exit as a file, which is being read quickly by the second simulation
       part. Use the Virtual\_input and Virtual\_output components for this technique.
 \item Use source optimizers like the components Source\_adapt or
       Source\_Optimizer. Such component may sometimes not be very efficient, when no
@@ -651,33 +658,48 @@ There are various ways to speedup simulations
       computation.
 \item Complex components usually take into account additional small effects in a simulation,
       but are much longer to execute. Thus, simple components should be prefered
-      whenever possible, at least to start with.
-\item Some users may wish to optimize some instrument \emph{parameters} (find best configuration to obtain maximum flux). See below.
+      whenever possible, at least in the beginning of a simulation project.
 \end{itemize}
 
-Additionally, the user may wish to optimize the parameters of a simulation (e.g. find the optimal curvature of a monochromator, or the best geometry of a given component).
+\subsection{Optimizing instrument parameters}
+\label{s:optimize}
+Often, the user may wish to optimize the parameters of a simulation (e.g. find the optimal curvature of a monochromator, or the best geometry of a given component).
 
 The choice of the optimization routine, of the simulation quality
 value to optimize, the initial parameter guess and the simulation
 length all have a large influence on the results.
-Be cautious and wise when interpreting the optimal guess.
+The user is adviced to be cautious when interpreting the optimization results.
 
 \subsubsection{Using the Simplex method}
 
-The \MCS\ package comes with a Simplex optimization method to find best instrument parameters in order to maximize all or some specified monitor integrated values. It uses the Downhill Simpex Method in Multidimensions (Nelder and Mead) which is a geometric optimization method somewhat similar to genetic algorithms. It is not as fast as the gradient method, but is much more robust.
+The \MCS\ package comes with a Simplex optimization method to find best instrument parameters in order to maximize all or some specified monitor integrated values. It uses the Downhill Simpex Method in Multidimensions~\cite{neldermead} which is a geometric optimization method somewhat similar to genetic algorithms. It is not as fast as the gradient method, but is much more robust.
 
-From \verb+mcgui+, one should choose the 'Optimization' execution mode (instead of the Simulation or Trace mode). Then speficy the instrument parameters to optimize by indicating their variation range 'min,max' (e.g. Lambda=1,4) just like parameter scans. Finally, run the simulation. Best configuration is then printed at the end of the process. Your may ask to maximize only given monitors (instead of all) by selecting their component names in the lower lists in the Run Dialog (up to 3).
+When using \verb+mcrun+ (section \ref{s:mcrun}), the optimization mode is set by using the
+\verb+--optim+ option or a list of monitors to maximize with as many
+\verb+--optim=COMP+ as required. The optimization accuracy criterion
+may be changed with the \verb+--optim-prec=accuracy+ option.
 
-When using \verb+mcrun+, the optimization mode is set by using the \verb+--optim+ option or a list of monitors to maximize with as many \verb+--optim=COMP+ as required. The optimization accuracy criteria may be changed with the \verb+--optim-prec=accuracy+ option.
+From \verb+mcgui+ (section \ref{s:mcgui}), one should choose the
+'Optimization' execution mode (instead of the Simulation or Trace
+mode). Then speficy the instrument parameters to optimize by
+indicating their variation range 'min,max' (e.g. Lambda=1,4) just like
+parameter scans. The optimization accuracy criterion is controlled
+using the 'prec.' entry box. Finally, run the simulation. The optimum
+set of parameters is then printed at the end of the simulation
+process. Your may ask to maximize only given monitors (instead of all) 
+by selecting their component names in the lower lists in the Run Dialog (up to 3).
 
-If you would like to maximize the flux at a given monitor, with some divergence constrains, you should for instance simply add a divergence collimator before the monitor.
+If you would like to maximize the flux at a given monitor, with some
+divergence constrains, you should for instance simply add a divergence
+collimator before the monitor. Alternatively, write a new component
+that produce the required 'figure-of-merit'.
 
 \subsubsection{Using custom optimization routines}
 The user should write a function script or a program that
 \begin{itemize}
 \item inputs the simulation parameters, which are usually numerical values such as $TT$ in the \verb+prisma2+ instrument from the \verb+examples+ directory of the package.
 \item builds a command line from these parameters.
-\item execute that command, and waits until the end of the computation.
+\item executes that command, and waits until the end of the computation.
 \item reads the relevant data from the monitors.
 \item outputs a simulation quality measurement from this data, usually the integrated counts or some peak width.
 \end{itemize}
@@ -714,7 +736,7 @@ The list of available \MCS\ front-end programs may be obtained from the \verb+mc
 \begin{verbatim}
     McStas Tools
        mcstas        Main instrument compiler
-       mcrun         Instrument maker and execution utility
+       mcrun         Instrument build and execution utility
        mcgui         Graphical User Interface instrument builder
        mcdoc         Component library documentation generator/viewer
        mcplot        Simulation result viewer
@@ -787,23 +809,37 @@ The {\bf File} menu has the following features:
   further below.
 \item[Plot results] plots (using \verb+mcplot+) the results of the
   last simulation run or spawns a load dialogue to load a set of results.
-\item[Configuration options] selection of plotting backend
-  (PGPLOT/Matlab/Scilab). Opens the choose backend dialog shown in
-  figure~\ref{fig:mcgui-choose}. All formats are chosen as full text, but a 'Use binary files' option is possible. Additionally, the editor to use to list instrument descriptions can be chosen. The HTML/VRML data files save results as a web-page document requiring a VRML viewer to display the data files as a 3D surface (openGL).\index{Tools!VRML/openGL}
+\item[Configuration options] Opens the choose backend dialog shown in
+  figure~\ref{fig:mcgui-choose}. Several settings can be chosen here:
+\begin{itemize}
+  \item Selection of  the desired (PGPLOT|Scilab|Matlab|HTML/VRML) output
+    format and possibility to save 'binary files' when
+  applicable (improved disk I/O).
+  \item One- or three-pane view of your instrument in trace mode when
+    using PGPLOT.
+  \item Clustering option (None|MPI|Threads|ssh) 
+  \item Choice of editor to use to when editing instrument files.
+  \item Automatic quotation of strings when inserting in the built-in
+    editor.
+  \item Possibility to \emph{not} optimize when compiling the
+    generated c-code.
+end{itemize}
 \end{description}
 
-\noindent The {\bf Neutron Site} menu contains a list of
-template/example instruments as found in the \MCS\ library, sorted by
-neutron site. When selecting one of these, a local copy of the
-instrument description is transfered to the active directory (so that
-users have modification rights) and loaded. One may then view its source (Edit) and use it directly for simulations/trace (3D View).
- \begin{figure}[htb!]
+\begin{figure}[htb!]
   \begin{center}
     \includegraphics[width=0.3\textwidth]{figures/choose_backend.eps}
   \end{center}
 \caption{The choose backend dialog in \texttt{mcgui}.}
 \label{fig:mcgui-choose}
 \end{figure}
+
+
+\noindent The {\bf Neutron Site} menu contains a list of
+template/example instruments as found in the \MCS\ library, sorted by
+neutron site. When selecting one of these, a local copy of the
+instrument description is transfered to the active directory (so that
+users have modification rights) and loaded. One may then view its source (Edit) and use it directly for simulations/trace (3D View).
 
 The {\bf Help} menu has the following features, through use of
 \verb+mcdoc+ and a web browser. To customize the used web browser, set
@@ -857,7 +893,8 @@ The meaning of the different fields is as follows:
 \item[Force] Forces to overwrite existing data files
 \item[Neutron count] sets the number of neutron rays to
   simulate (the \verb+--ncount+ option).
-  \item[Gravity] Activates gravitation handling. Some components may not handle it properly, and produce wrong results.
+  \item[Gravity] Activates gravitation handling. Be aware that not all
+    components support the use of gravitation.
 \item[Distribute mcrun scans (grid)] activates the distribution of the scan
   steps over a computer grid, using an \texttt{ssh} mechanism.
   See section~\ref{s:run-mpi} on parallel computing for more informations
@@ -869,12 +906,23 @@ The meaning of the different fields is as follows:
 \item[Random seed/Set seed to] selects between using a random seed (different
   in each simulation) for the random number generator, or using a fixed
   seed (to reproduce results for debugging).
-\item[Simulate/Trace (3D)] selects between running the simulation
-  normally, or using the \verb+mcdisplay+ front-end to view the instrument in 3D and trace the neutrons individually inside components.
-\item[\# Scanpoints] sets the number of times the simulation has to repeated to cover a parameter scan. If no parameter scan is specified, the simulation is just repeated.
-\item[Inspect component] will trace only neutron trajectories that reach a given component (e.g. sample or detector).
-\item[First component] seletcs the first component to plot (default is first) in order to define a region of interest.
-\item[Last component] seletcs the last component to plot (default is first) in order to define a region of interest.
+\item[Simulate/Trace (3D)/Optimize] selects between several modes of
+  running the simulation:
+  \begin{itemize}
+  \item Simulate: perform a normal simulation or a scan when \#steps
+    is set to non-zero value
+  \item Trace (3D view): View the instrument in 3D tracing indivitual
+    neutrons through the instrument
+  \item Optimize: find the optimum value of the simulation parameters
+    in the given ranges (see section \ref{s:optimize}).
+\item[\# steps / \# optim] sets the number of simulation to run when
+  performing a parameter scan or the number of iterations to
+  perform in optimization mode. 
+\item[prec.] sets the required, final precision when in optimization
+  mode. 
+\item[Inspect component] (Trace mode) will trace only neutron trajectories that reach a given component (e.g. sample or detector).
+\item[First component] (Trace mode) seletcs the first component to plot (default is first) in order to define a region of interest.
+\item[Last component] (Trace mode) seletcs the last component to plot (default is first) in order to define a region of interest.
 \item[Start] runs the simulation.
 \item[Cancel] aborts the dialog.
 \end{description}
@@ -882,7 +930,9 @@ The meaning of the different fields is as follows:
 Before running the simulation, the instrument definition is
 automatically compiled if it is newer than the generated C file (or if the C file
 is newer than the executable). The executable is
-assumed to have a \verb+.out+ suffix in the filename.
+assumed to have a \verb+.out+ suffix in the filename. NB: If
+components are changed, automatic compilation is \emph{not}
+performed. Use the File->Compile menu item in mcgui.
 
 
 \subsubsection{The plot dialog} \index{Tools!PGPLOT}
@@ -927,7 +977,8 @@ The dialog will also pick up those of the users own components that are
   section~\ref{s:mcdoc} for how to write components to integrate well
   with this facility.
 \item[\textit{Type}] These menu entries give quick access to the entry
-  dialog for the various components available.
+  dialog for the various component types available, i.e. Sources,
+  Optics, Samples, Monitors, Misc, Contrib and Obsolete.
 \end{description}
 \begin{figure}[tbp]
   \begin{center}
@@ -947,7 +998,7 @@ the documentation for PGPLOT on the local system in case of
 difficulty. \index{Environment variable!PGPLOT\_DIR}
 \index{Environment variable!PGPLOT\_DEV}
 
-\subsection{Running simulations with automatic compilation (mcrun)}
+\subsection{Running simulations on the commandline (mcrun)}
 \label{s:mcrun}
 \index{Tools!mcrun|textbf}
 \index{Parameters!Instruments}
@@ -1004,11 +1055,11 @@ with the integrated intensity and estimated error in all monitors. Additionally,
 file \verb+mcstas.sci+ (when using Scialb format) is written that can be read by the \verb+mcplot+
 front-end to plot the results on the screen or in a Postscript file, see
 section~\ref{s:mcplot}. \index{Tools!mcplot}
-\item When doing a scan, the \texttt{-f {\it file}} and
+\item When performing a scan, the \texttt{-f {\it file}} and
   \texttt{--file={\it file}} options make \verb+mcrun+ write the output
   to the files \texttt{{\it file\/}.dat} and \texttt{{\it file\/}.sim}
   instead of the default names.
-\item When doing a scan, the \texttt{-d {\it dir}} and
+\item When performing a scan, the \texttt{-d {\it dir}} and
   \texttt{--dir={\it dir}} options make \verb+mcrun+ put all output in a
   newly created directory \textit{dir}. Additionally, the directory will
   have subdirectories \verb+1+, \verb+2+, \verb+3+,\ldots containing all
@@ -1031,6 +1082,7 @@ definition, showing the position of the components and the paths of the
 simulated neutrons through the instrument. It is thus very useful for
 debugging a simulation, for example to spot components in the wrong
 position or to find out where neutrons are getting lost.
+(See figures \ref{fig:mcdisp_PGPLOT}-\ref{fig:mcdisp_Matlab}.)
 
 To use the \verb+mcdisplay+ front-end with a simulation, run it as
 follows:
@@ -1098,7 +1150,7 @@ cases, the \verb+--inspect=+\textit{comp\/} option is useful. With this
 option, only neutrons that reach the component named \textit{comp\/} are
 shown in the graphics display.
 
-As of \MCS 1.10, the PGPLOT version has a special mode for time of
+As of \MCS\ 1.10, the PGPLOT version has a special mode for time of
 flight applications. Using the new commandline options \verb+--TOF/-T+
 and \verb+--tmax=TMAX+, chopper acceptance diagrams can be generated
 from the statistical information from the simulated neutron rays. As
@@ -1131,7 +1183,7 @@ When using the \verb+-pVRML+ option, the instrument is shown in Virtual Reality 
 \index{Tools!mcplot|textbf}
 
 The front-end \verb+mcplot+ (mcplot.pl on Windows) is a program that produces
-plots of all the detectors in a simulation, and it is thus useful to get
+plots of all the monitors in a simulation, and it is thus useful to get
 a quick overview of the simulation results.
 
 In the simplest case, the front-end is run simply by typing
@@ -1139,7 +1191,7 @@ In the simplest case, the front-end is run simply by typing
     mcplot
 \end{verbatim}
 This will plot any simulation data stored in the current directory,
-which is where simulations put their results by default. If the
+which is where simulations store their results by default. If the
 \verb+--dir+ or \verb+--file+ options have been used (see
 section~\ref{s:run-sim}), the name of the file or directory should be
 passed to mcplot, {\em e.g.} ``\texttt{mcplot {\it dir}}'' or ``\texttt{mcplot
@@ -1199,7 +1251,7 @@ To use the \verb+mcplot+ front-end, the programs Perl, and either Scilab or Matl
 
 \begin{figure}[htb!]
   \begin{center}
-    \includegraphics[angle=-90,width=0.55\textwidth]{figures/mcresplot_PGPLOT.ps}
+    \includegraphics[angle=-90,width=0.9\textwidth]{figures/mcresplot_PGPLOT.ps}
   \end{center}
 \caption{Output from \texttt{mcresplot} with PGPLOT backend.
   Use P, C and G keys to write hadrcopy files.}
@@ -1227,7 +1279,9 @@ the Res\_monitor component.
 This front-end currently only works with the PGPLOT plotter, but ports for Matlab and Scilab may be written in the future.
 
 The front-end will open a window displaying projections of the 4-dimensional
-resolution function $R(\boldsymbol{Q}, \omega)$. The covariance matrix of the
+resolution function $R(\boldsymbol{Q}, \omega)$, measured at a
+particular choice of $\boldsymbol{Q}$ and $\omega$, see the component
+manual. The covariance matrix of the
 resolution function, the resolution along each projection axis and the resulting
 resolution matrix are also shown, as well as the instrument name and parameters
 used for the simulation.
@@ -1252,7 +1306,7 @@ Alternatively, if a component or instrument {\it comp} is specified, it will be 
 
 The last example will list the name and action of all \MCS\ tools (same as \verb+--tools+ option).
 
-Additionally, the \verb+--web+, \verb+--manual+ and \verb+--comp+ options will open the \MCS\ web site page, the User Manual (this document) and the Component Manual, all requiring \verb+BROWSER+ to be defined. Finally, the \verb+--help+ option will display the command help, as usual.
+Additionally, the options \verb+--web+, \verb+--manual+ and \verb+--comp+ will open the \MCS\ web site page, the User Manual (this document) and the Component Manual, all requiring \verb+BROWSER+ to be defined. Finally, the \verb+--help+ option will display the command help, as usual.
 
 See section~\ref{s:mcdoc} for more details about the McDoc usage and header format.
 To use the \verb+mcdoc+ front-end, the program Perl should be available.
@@ -1313,9 +1367,9 @@ to translate files into format FORMAT. When given a directory, the translation w
 
 The \verb+--merge+ option may be used to merge similar files, e.g. obtained from grid systems, just as if a longer run was achieved.
 
-The \verb+--scan+ option may be used to reconstruct the scan data from a set of directories which vary instrument parameters. For instanmce, you ran a scan, but finally realized you should have prolungated it. Then simply simulate the missing bits, and apply \verb+mcformat -d scan_data --format=PGPLOT --scan step0 .. stepN+. The resulting scan data is compatible with \verb+mcplot+ only when generating PGPLOT/McStas format.\index{Tools!mcplot} You may conjugate this option with the \verb+--merge+ in order to add/merge similar data sets before re-building the scan.
+The \verb+--scan+ option may be used to reconstruct the scan data from a set of directories which vary instrument parameters. For instanmce, you ran a scan, but finally realized you should have prolongated it. Then simply simulate the missing bits, and apply \verb+mcformat -d scan_data --format=PGPLOT --scan step0 .. stepN+. The resulting scan data is compatible with \verb+mcplot+ only when generating PGPLOT/McStas format.\index{Tools!mcplot} You may conjugate this option with the \verb+--merge+ in order to add/merge similar data sets before re-building the scan.
 
-The analysis of data files works by searching keywords inside data files (e.g. 'Source' for the source instrument description file). If some filenames or component names match these keywords (e.g. using a file 'Source.psd'), the extracted metadata information may be wrong, eventhough the data itself will be correct.\index{Bugs}
+The data files are analyzed by searching keywords inside data files (e.g. 'Source' for the source instrument description file). If some filenames or component names match these keywords (e.g. using a file 'Source.psd'), the extracted metadata information may be wrong, eventhough the data itself will be correct.\index{Bugs}
 
 \section{Analyzing and visualizing the simulation results}
 \label{s:analyze}
@@ -1338,7 +1392,7 @@ simulation data.
 The \MCS\ original format, which is equivalent to the PGPLOT format, is simply columns of ASCII text that most programs should
 be able to read.
 
-One-dimensional histogram monitors (time-of-flight, energy-sensitive)
+One-dimensional histogram monitors (time-of-flight, energy)
 write one line for each histogram bin. Each line contains a number
 identifying the bin (\textit{i.e}.\ the time-of-flight) followed by
 three numbers: the simulated intensity, an estimate of the statistical
@@ -1354,9 +1408,10 @@ Single-point monitors output the neutron intensity, the estimated
 error, and the neutron event count as numbers on the
 terminal. (The results from a series of simulations may be combined in a
 data file using the \verb+mcrun+ front-end as explained in
-section~\ref{s:mcrun}).
+section~\ref{s:mcrun}, similarly for the integrated intensity on one-
+and two-dimensional monitors).
 
-Both one- and two-dimentional monitor output by default start with a
+Both one- and two-dimensional monitor output by default start with a
 header of comment lines, all beginning with the `\verb+#+' character.
 This header gives such information as the name of the instrument used in
 the simulation, the values of any instrument parameters, the name of the
@@ -1649,6 +1704,6 @@ every node.
 
 \subsection{Parallel computing (multi-threading)}
 
-Multi-threading is under experimentation. It has been implemented when using \verb+mcrun -c --threads=NB_CPU ...+ and is also available from McGUI Run Dialog.
+Multi-threading is under experimentation. It has been implemented when using \\\verb+mcrun -c --threads=NB_CPU ...+ and is also available from McGUI Run Dialog.
 
 The method is based on a parallel execution of threads, which require mutexes in order to set rules for global (shared) memory accesses. This introduces quite large overhead and reduces efficiency. We thus do NOT recommand to use it. Further developments are under way.
