--- a/trunk/datablad.tex
+++ b/trunk/datablad.tex
@@ -58,13 +58,14 @@ Telefax +45 4677 4013
 \begin{datablad}
 \titel{User and Programmers Guide to the Neutron Ray-Tracing Package
  \MCS , Version \version}
-\forfatter{Peter Kj\ae r Willendrup, Emmanuel Farhi, Klaus Lieutenant, Kim Lefmann, and Kristian Nielsen}
+\forfatter{Peter Willendrup, Emmanuel Farhi, Klaus Lieutenant, Kim
+  Lefmann, and Peter Christiansen}
 \isbn{ISBN 87--550--3561--2 (Internet)}\issn{0106--2840}
 \afdeling{Materials Research Department}
 \dato{\reldate}
 \regnummer{---}
 \projektnummer{---}
-\sider{\thepage}\tabeller{2}\figurer{15}\referencer{10}
+\sider{\thepage}\tabeller{12}\figurer{21}\referencer{47}
 \resume{\input{abstract}}
 \deskriptorer{Neutron Instrumentation; Monte Carlo Simulation; Software}
 \end{datablad}
