--- a/trunk/kernelcalls.tex
+++ b/trunk/kernelcalls.tex
@@ -196,9 +196,9 @@ resulting Coord structure.
   length 1.
 \item {\bf scalar\_prod}$(a_x,a_y,a_z,b_x,b_y,b_z)$. Returns the scalar
   product of the two vectors $(a_x,a_y,a_z)$ and $(b_x,b_y,b_z)$.
-\item {\bf vec\_prod}$(a_x,a_y,a_z,b_x,b_y,b_z, c_x,c_y,c_z)$. Sets
+\item {\bf vec\_prod}(\&$a_x$,\&$a_y$,\&$a_z$,$b_x$,$b_y$,$b_z$, $c_x$,$c_y$,$c_z$). Sets
   $(a_x,a_y,a_z)$ equal to the vector product $(b_x,b_y,b_z) \times (c_x,c_y,c_z)$.
-\item {\bf rotate}$(x,y,z,v_x,v_y,v_z,\varphi,a_x,a_y,a_z)$. Set
+\item {\bf rotate}(\&$x$,\&$y$,\&$z$,$v_x$,$v_y$,$v_z$,$\varphi$,$a_x$,$a_y$,$a_z$). Set
   $(x,y,z)$ to the result of rotating the vector $(v_x,v_y,v_z)$
   the angle $\varphi$ (in radians) around the vector $(a_x,a_y,a_z)$.
 \item {\bf normal\_vec}(\&$n_x$, \&$n_y$, \&$n_z$, $x$, $y$, $z$).
@@ -219,16 +219,19 @@ Details about using these functions are given in the \MCS\ User Manual.
   programs.
 %See section~\ref{s:comp-finally} ??? for details.
 \item {\bf DETECTOR\_OUT\_1D}$(...)$. Used to output the results from a
-  one-dimentional detector.
+  one-dimensional detector. Integrated intensities error etc. is also
+  reported as for DETECTOR\_OUT\_0D.
 %See section~\ref{s:comp-finally} for details.
 \item {\bf DETECTOR\_OUT\_2D}$(...)$. Used to output the results from a
-  two-dimentional detector.
+  two-dimentional detector. Integrated intensities error etc. is also
+  reported as for DETECTOR\_OUT\_0D.
 %See section~\ref{s:comp-finally} for details.
 \item {\bf DETECTOR\_OUT\_3D}$(...)$. Used to output
   the results from a three-dimentional detector. Arguments are the same as
-  in DETECTOR\_OUT\_2D, but with the additional $z$ axis (the signal).
+  in DETECTOR\_OUT\_2D, but with an additional $z$ axis.
   Resulting data files are treated as 2D data, but the 3rd dimension is
-  specified in the $type$ field.
+  specified in the $type$ field. Integrated intensities error etc. is also
+  reported as for DETECTOR\_OUT\_0D.
 \item {\bf mcinfo\_simulation}{\it (FILE *f, mcformat,
   char *pre, char *name)} is used to append the simulation parameters into file $f$
   (see for instance {\bf Res\_monitor}).
@@ -263,7 +266,7 @@ Details about using these functions are given in the \MCS\ User Manual.
 \item {\bf rand01}(). Returns a random number distributed uniformly between 0 and 1.
 \item {\bf randnorm}(). Returns a random number from a normal
   distribution centered around 0 and with $\sigma=1$. The algorithm used to
-  get the normal distribution is explained in Ref.~\cite[ch.7]{num_rep}.
+  sample the normal distribution is explained in Ref.~\cite[ch.7]{num_rep}.
 \item {\bf randpm1}(). Returns a random number distributed uniformly between -1 and 1.
 \item {\bf randvec\_target\_circle}(\&$v_x$, \&$v_y$, \&$v_z$, \&$d\Omega$,
   aim$_x$, aim$_y$, aim$_z$, $r_f$). Generates a random vector $(v_x, v_y,
