A couple of bugs corrected
git-svn-id: https://svn.mccode.org/svn/McStasTeX@173 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/running.tex
+++ b/trunk/running.tex
@@ -823,7 +823,7 @@ The {\bf File} menu has the following features:
     editor.
   \item Possibility to \emph{not} optimize when compiling the
     generated c-code.
-end{itemize}
+\end{itemize}
 \end{description}
 
 \begin{figure}[htb!]
@@ -915,6 +915,7 @@ The meaning of the different fields is as follows:
     neutrons through the instrument
   \item Optimize: find the optimum value of the simulation parameters
     in the given ranges (see section \ref{s:optimize}).
+\end{itemize}
 \item[\# steps / \# optim] sets the number of simulation to run when
   performing a parameter scan or the number of iterations to
   perform in optimization mode. 
