Proof edits from Kim and I
git-svn-id: https://svn.mccode.org/svn/McStasTeX@175 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/changes.tex
+++ b/trunk/changes.tex
@@ -100,8 +100,8 @@ the {\it Component Overview} of the {\it User Manual}.
 \begin{itemize}
 \item New 'merge/convert' tool mcformat: Convert between McStas output formats and merge cluster
     node datasets into one dataset.
-\item TOF mode for mcdisplay (statistical chopper acceptance diagrams generated from the simulated
-    neutron rays)
+\item TOF mode for mcdisplay (Statistical chopper acceptance diagrams generated from the simulated
+    neutron rays. Currently only supported on Unix systems with PGPLOT.)
 \end{itemize}
 \subsection{Installation}
 \begin{itemize}
