--- a/trunk/comp_abstract.tex
+++ b/trunk/comp_abstract.tex
@@ -20,7 +20,7 @@ tests have been carried out.
 However, no absolute guaranty may be given concerning their accuracy.\index{Environment variable!MCSTAS}
 
 The \verb+contrib+ directory of the library contains components
-that were given by \MCS\ users,
+that were submitted by \MCS\ users,
 but where responsibility has not (yet) been taken by the \MCS\ core team. \index{Library!Components!contrib}
 
 Additionally the \verb+obsolete+ directory of the library gathers components that were renamed, or considered to be outdated.
@@ -51,12 +51,12 @@ ESS\_moderator\_long & A parametrised pulsed source for modelling ESS long pulse
 ESS\_moderator\_short & A parametrised pulsed source for modelling ESS short pulses. \\
 Moderator  & A simple pulsed source for time-of-flight. \\
 Monitor\_Optimizer &  To be used after the Source\_Optimizer component. \\
-Source\_Maxwell\_3 & Source with up to three Maxwellian distributions \\
+Source\_Maxwell\_3 & Continuous source with up to three Maxwellian distributions \\
 Source\_Optimizer & Optimizes the neutron flux passing through the Source\_Optimizer in order to have the maximum flux at the Monitor\_Optimizer position. \\
-Source\_adapt  &       Neutron source with adaptive importance sampling. \\
-Source\_div &          Neutron source with a specified Gaussian divergence. \\
-Source\_simple &  A simple circular neutron source with flat energy/wavelength spectrum.\\
-Source\_gen     &    General neutron source with tunable shape, spectrum,
+Source\_adapt  &       Continuous neutron source with adaptive importance sampling. \\
+Source\_div &          Continuous neutron source with a specified Gaussian divergence. \\
+Source\_simple &  A simple, continuous circular neutron source with flat energy/wavelength spectrum.\\
+Source\_gen     &    General, continuous neutron source with tunable shape, spectrum,
                      and divergence. \\
       \hline
     \end{tabular}
@@ -102,7 +102,7 @@ Arm                &  Arm/optical bench. \\
  Slit                & Rectangular/circular
                       slit. \\
  V\_selector          & Velocity selector. \\
- Vitess\_ChopperFermi & Curved Fermi chopper (slower than FermiChopper).
+ Vitess\_ChopperFermi & Curved Fermi chopper (longer execution time than FermiChopper).
                      From the Vitess package.\\ \hline
     \end{tabular}
     \caption{Optics components of the \MCS\ library.}
@@ -130,7 +130,8 @@ Arm                &  Arm/optical bench. \\
   Sans\_spheres  & Simple sample for Small Angle Neutron Scattering - hard spheres \\
   Single\_crystal & Mosaic single crystal with multiple scattering vectors
                     using a data file. \\
-  V\_sample      & Vanadium sample, or other incoherent scatterer.\\ \hline
+  V\_sample      & Vanadium sample, or other incoherent
+  scatterer. Optional quasielastic broadening.\\ \hline
     \end{tabular}
     \caption{Sample components of the \MCS\ library.}
     \label{t:comp-samples}
@@ -149,19 +150,19 @@ Arm                &  Arm/optical bench. \\
 %DivLambda\_monitor &  Divergence/wavelength monitor. \\
 DivPos\_monitor  &    Divergence/position monitor (acceptance diagram). \\
 Divergence\_monitor &  Horizontal+vertical
-                    divergence monitor. \\
+                    divergence monitor (2D). \\
 %EPSD\_monitor    &    A monitor measuring neutron intensity vs. position, x,
 %                    and neutron energy, E. \\
 E\_monitor       &    Energy-sensitive monitor. \\
 %Hdiv\_monitor    &    Horizontal divergence monitor \\
 L\_monitor        &  Wavelength-sensitive monitor. \\
-%Monitor          &   Simple single detector/monitor. \\
+Monitor          &   Simple single detector/monitor. \\
 %Monitor\_4PI     &    Monitor that detects ALL non-absorbed neutron rays. \\
 Monitor\_nD      &   General monitor that can output
                     0/1/2D signals (Intensity or signal vs. [something]
                     and vs. [something] ...). \\
 PSD\_monitor     &    Position-sensitive monitor. \\
-%PSD\_monitor\_4PI  &   Spherical position-sensitive detector. \\
+PSD\_monitor\_4PI  &   Spherical position-sensitive detector. \\
 %PSDcyl\_monitor  &    A 2D position-sensitive monitor. The shape is
 %                    cylindrical with the axis vertical. The monitor
 %                    covers the whole cylinder (360 degrees). \\
@@ -170,7 +171,7 @@ PSD\_monitor     &    Position-sensitive monitor. \\
 PreMonitor\_nD    &   This component is a PreMonitor that is to be
                     used with one Monitor\_nD,
                     in order to record some neutron parameter correlations. \\
-TOFLambda\_monitor &  Time-of-flight/wavelength monitor. \\
+TOFLambda\_monitor &  Time-of-flight vs. wavelength monitor. \\
 %TOF\_cylPSD\_monitor & Cylindrical (2pi) PSD Time-of-flight monitor. \\
 TOF\_monitor     &    Rectangular Time-of-flight monitor. \\
 %TOFlog\_mon      &    Rectangular Time-of-flight monitor with logarithmic
