Added Roland Schedler contrib 'Exact_radial_coll' in changes docs
git-svn-id: https://svn.mccode.org/svn/McStasTeX@176 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/changes.tex
+++ b/trunk/changes.tex
@@ -76,6 +76,8 @@ the {\it Component Overview} of the {\it User Manual}.
     (Contrib: Chama Hennane, ENSIMAG and Emmanuel Farhi, ILL) 
 \item Source\_multi\_surfaces.comp - Source comp with multiple surface areas with individual
     spectrums (Contrib: Ludovic Giller, Uwe Filges)
+\item Exact\_radial\_coll.comp - Radial collimator comp, exact model
+    (Contrib: Roland Schedler, HMI)
 \item V\_sample enriched with quasi-elastic features (Kim Lefmann)
 \end{itemize}
 \subsection{New example instruments}
