Comment about contrib Radial coll, Fermi Chopper, parameter setting (kernel) and optimization interval warning.
git-svn-id: https://svn.mccode.org/svn/McStasTeX@177 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/collimator_radial.tex
+++ b/trunk/collimator_radial.tex
@@ -31,3 +31,5 @@ The computing efficiency is then lowered by a factor 2.
 
 The component can be made oscillating with an amplitude of $roc$ times
 $\pm w_1$.
+
+As an alternative, you may use the {\bf Exact\_radial\_coll} contributed component.
