--- a/trunk/guide.tex
+++ b/trunk/guide.tex
@@ -270,7 +270,7 @@ Chamfers originate from the substrate manufacturing, so that operators do not ha
 The straight section of length $l$ may be divided into $n$ bits of same length
 within which chamfers are taken into account.
 
-The component has also the capability to rotate at a given frequenccy in order to approximate a Fermi Chopper, including phase shift. The approximation resides in the fact that the component is considered fixed during neutron propagation inside slits.
+The component has also the capability to rotate at a given frequenccy in order to approximate a Fermi Chopper, including phase shift. The approximation resides in the fact that the component is considered fixed during neutron propagation inside slits. Beware that this component is then located at its entry window (not centered as the other Fermi choppers).\index{Bugs}
 
 To activate gravitation support, either select the \MCS\ gravitation support,
 or set the gravitation field strength $G$ (e.g. -9.81 on Earth).
