Two more contribs
git-svn-id: https://svn.mccode.org/svn/McStasTeX@178 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/changes.tex
+++ b/trunk/changes.tex
@@ -75,9 +75,13 @@ the {\it Component Overview} of the {\it User Manual}.
 \item Virtual\_mcnp\_*.comp - MCNP event file handeling
     (Contrib: Chama Hennane, ENSIMAG and Emmanuel Farhi, ILL) 
 \item Source\_multi\_surfaces.comp - Source comp with multiple surface areas with individual
-    spectrums (Contrib: Ludovic Giller, Uwe Filges)
+    spectrums (Contrib: Ludovic Giller, EPFL and Uwe Filges, PSI)
+\item multi\_pipe.comp - Defines a 'grid' of slits (focusing device)
+    (Contrib: Uwe Filges, PSI)
 \item Exact\_radial\_coll.comp - Radial collimator comp, exact model
     (Contrib: Roland Schedler, HMI)
+\item FermiChopper\_ILL.comp  - Fermi Chopper comp with optional
+  supermirror coated blades. (Contrib: Helmut Schober, ILL)
 \item V\_sample enriched with quasi-elastic features (Kim Lefmann)
 \end{itemize}
 \subsection{New example instruments}
