--- a/trunk/kernel.tex
+++ b/trunk/kernel.tex
@@ -35,7 +35,7 @@ for
 with various distributions
 \item Functions for reading or writing informations from/to data
   files
-\item Convenient conversion factors between relevant units, etc. 
+\item Convenient conversion factors between relevant units, etc.
 \index{Library!Run-time}
 \index{Library!Components!share}
 \end{itemize}
@@ -62,7 +62,7 @@ since \MCS\ does not automatically check which component is the next to
 interact with the neutron ray at a given point in the simulation. Note
 that in case of a negative propagation time from one component to the
 next, the neutron ray is by default \emph{absorbed} as this is often
-an indication of unphysical conditions. 
+an indication of unphysical conditions.
 
 The instrument is given a global, absolute coordinate system. In
 addition, every component in the instrument has its own local coordinate
@@ -932,7 +932,7 @@ component. \index{Library!Run-time!SCATTER}
 
 \subsection{The \texttt{SAVE} section}
 \label{s:comp-save}
-\index{Data format}
+\index{Data formats}
 \index{Keyword!SAVE}
 
 \begin{quote}
